--- a/src/app/feature/events/edit-event-form/link-preview/link-preview.component.html
+++ b/src/app/feature/events/edit-event-form/link-preview/link-preview.component.html
@@ -3,7 +3,7 @@
     <div class="flex h-32 gap-4">
       <span
         class="border-error text-warning flex h-32 w-48 place-content-center items-center rounded-lg border-2">
-        <ng-icon name="saxWarning2Bulk" size="48" />
+        <ng-icon name="phosphorWarningCircleDuotone" size="48" />
       </span>
       <span class="flex-1">
         <div class="flex shrink flex-col gap-4">
