--- a/src/app/feature/events/edit-event-form/tags-input/tags-input.component.html
+++ b/src/app/feature/events/edit-event-form/tags-input/tags-input.component.html
@@ -22,7 +22,7 @@
           (keyup.enter)="removeTag(tag)"
           tabindex="0">
           {{ tag.title }}
-          <ng-icon name="saxCloseCircleOutline" class="ml-2"></ng-icon>
+          <ng-icon name="phosphorBackspace" class="ml-2" size="24"></ng-icon>
         </a>
       }
     </div>
