--- a/src/app/feature/events/edit-event-form/text-input/text-input.component.html
+++ b/src/app/feature/events/edit-event-form/text-input/text-input.component.html
@@ -16,7 +16,7 @@
       tabindex="1"
       (click)="showHelp.set(true)"
       (keyup.enter)="showHelp.set(true)">
-      <ng-icon name="saxMessageQuestionBulk" size="22" />
+      <ng-icon name="phosphorSealQuestionDuotone" size="22" />
     </a>
   </label>
   <textarea
