--- a/src/app/feature/non-authorized/timeline/timeline-page.component.html
+++ b/src/app/feature/non-authorized/timeline/timeline-page.component.html
@@ -10,7 +10,7 @@
         }
         @if (error()) {
           <div role="alert" class="alert alert-error">
-            <ng-icon name="saxInformationOutline" size="32" />
+            <ng-icon name="phosphorInfo" size="32" />
             <span>{{ error() }}</span>
           </div>
         }
