--- a/src/app/feature/non-authorized/user/login-page/login-page.component.html
+++ b/src/app/feature/non-authorized/user/login-page/login-page.component.html
@@ -20,7 +20,7 @@
         @if (isLoading() === true) {
           <span class="loading loading-spinner"></span>
         } @else {
-          <ng-icon name="saxLogin1Outline" size="24"></ng-icon>
+          <ng-icon name="phosphorSignIn" size="24"></ng-icon>
         }
         authorize
       </button>
