--- a/src/app/feature/non-authorized/user/shared/header-login-button/header-login-button.component.html
+++ b/src/app/feature/non-authorized/user/shared/header-login-button/header-login-button.component.html
@@ -2,7 +2,7 @@
   @if (isLoading() === true) {
     <span class="loading loading-spinner"></span>
   } @else {
-    <ng-icon name="saxLoginOutline" size="24"></ng-icon>
+    <ng-icon name="phosphorUserCircleDashed" size="24"></ng-icon>
   }
   Login
 </button>
