--- a/src/app/feature/timeline/components/add-timeline/add-timeline.component.html
+++ b/src/app/feature/timeline/components/add-timeline/add-timeline.component.html
@@ -17,10 +17,10 @@
       <span class="loading loading-spinner"></span>
     } @else {
       @if (isAuthorized()) {
-        <ng-icon name="saxAddSquareOutline" size="24"></ng-icon>
+        <ng-icon name="phosphorPlusSquare" size="24"></ng-icon>
         add
       } @else {
-        <ng-icon name="saxLogin1Outline" size="24"></ng-icon>
+        <ng-icon name="phosphorSignIn" size="24"></ng-icon>
         sign-in and add
       }
     }
