--- a/src/app/feature/timeline/components/create-timeline-button/create-timeline-button.component.html
+++ b/src/app/feature/timeline/components/create-timeline-button/create-timeline-button.component.html
@@ -2,7 +2,7 @@
   class="btn btn-accent text-base-content"
   [class.btn-lg]="isLarge()"
   (click)="showAddTimelineWindow.set(true)">
-  <ng-icon name="saxHierarchySquare3Outline" [size]="size()"></ng-icon>
+  <ng-icon name="phosphorTreeView" [size]="size()"></ng-icon>
   create timeline
 </button>
 
