--- a/src/app/feature/ui/table-of-contents/components/table-of-contents-container/table-of-contents-container.component.html
+++ b/src/app/feature/ui/table-of-contents/components/table-of-contents-container/table-of-contents-container.component.html
@@ -3,7 +3,7 @@
     <div
       class="bg-accent text-accent-content rounded-r-xl py-4 text-xl shadow-2xl shadow-black">
       <div class="icon text-primary absolute cursor-pointer">
-        <ng-icon name="saxArrowSquareRightBold" size="48"></ng-icon>
+        <ng-icon name="phosphorArrowUpRight" size="48"></ng-icon>
       </div>
 
       <app-table-of-content
