--- a/src/app/shared/ui/date-picker/date-picker.component.html
+++ b/src/app/shared/ui/date-picker/date-picker.component.html
@@ -13,13 +13,13 @@
         type="button"
         class="btn join-item btn-sm"
         (click)="switchMonth(-1)">
-        <ng-icon name="saxArrowLeft2Outline"></ng-icon>
+        <ng-icon name="phosphorArrowLeft"></ng-icon>
       </button>
       <button
         type="button"
         class="btn join-item btn-sm"
         (click)="switchMonth(1)">
-        <ng-icon name="saxArrowRight3Outline"></ng-icon>
+        <ng-icon name="phosphorArrowRight"></ng-icon>
       </button>
     </div>
   </div>
