--- a/src/app/feature/non-authorized/user/redirect-page/redirect-page.component.html
+++ b/src/app/feature/non-authorized/user/redirect-page/redirect-page.component.html
@@ -6,7 +6,7 @@
       <div class="h-20">
         @if (error(); as error) {
           <div role="alert" class="alert alert-error">
-            <ng-icon name="saxInformationOutline" size="32" />
+            <ng-icon name="phosphorInfo" size="32" />
             <span>{{ error }}</span>
           </div>
         }
@@ -19,7 +19,7 @@
           </button>
         } @else {
           <button class="btn btn-primary" (click)="login()">
-            <ng-icon name="saxLoginOutline" size="24" />
+            <ng-icon name="phosphorSignIn" size="24" />
             login again
           </button>
         }
