--- a/src/app/feature/timeline/share/timeline/timeline.component.html
+++ b/src/app/feature/timeline/share/timeline/timeline.component.html
@@ -6,7 +6,7 @@
 
 @if (error()) {
   <div role="alert" class="alert alert-error">
-    <ng-icon name="saxInformationOutline" size="32" />
+    <ng-icon name="phosphorInfo" size="32" />
     <span>{{ error() }}</span>
   </div>
 }
@@ -21,7 +21,7 @@
   } @else {
     @if (!error() && !isLoading()) {
       <div role="alert" class="alert alert-info">
-        <ng-icon name="saxInformationOutline" size="32" />
+        <ng-icon name="phosphorInfo" size="32" />
         <span>There are no events.</span>
       </div>
     }
