feat: show event menu for all items

--- a/src/app/feature/authorized/dashboard/dashboard.component.html
+++ b/src/app/feature/authorized/dashboard/dashboard.component.html
@@ -25,6 +25,7 @@
           <app-shared-timeline
             [timelineId]="timelineId"
             [isEditable]="true"
+            [isAuthorized]="true"
             (delete)="deleteEvent($event)"
             (edit)="editEvent($event)" />
 
