--- a/src/app/feature/timeline/share/timeline/timeline.component.html
+++ b/src/app/feature/timeline/share/timeline/timeline.component.html
@@ -16,6 +16,7 @@
     <app-timeline-events-list
       [events]="events"
       [isEditable]="isEditable()"
+      [isAuthorized]="isAuthorized()"
       (delete)="delete.emit($event)"
       (edit)="editEvent($event)" />
   } @else {
