--- a/src/app/feature/non-authorized/develop/develop-page.component.html
+++ b/src/app/feature/non-authorized/develop/develop-page.component.html
@@ -19,7 +19,11 @@
     <div class="py-4" id="TimelineComponent">
       <h2 class="text-2xl">TimelineComponent</h2>
       <div class="mt-4 grid w-full grid-cols-1 gap-4">
-        <app-shared-timeline [timelineId]="indexTimeline" [limit]="3" />
+        <app-shared-timeline
+          [timelineId]="indexTimeline"
+          [limit]="3"
+          [isEditable]="false"
+          [isAuthorized]="false" />
       </div>
     </div>
 
