--- a/src/app/feature/timeline/components/event/menu/menu.component.html
+++ b/src/app/feature/timeline/components/event/menu/menu.component.html
@@ -1,46 +1,50 @@
 @if (timelineEvent().id) {
   <ul class="join">
-    <!-- <li> -->
-    <!--   <a -->
-    <!--     tabindex="0" -->
-    <!--     title="copy link" -->
-    <!--     class="btn join-item btn-sm btn-neutral" -->
-    <!--     [class.done]="copied()" -->
-    <!--     (click)="copyClick(timelineEvent())" -->
-    <!--     (keyup)="copyClick(timelineEvent())"> -->
-    <!--     <ng-icon name="phosphorLinkSimpleHorizontal" size="20" /> -->
-    <!--   </a> -->
-    <!-- </li> -->
-    <!-- <li> -->
-    <!--   <a -->
-    <!--     tabindex="0" -->
-    <!--     title="like" -->
-    <!--     class="btn join-item btn-sm btn-neutral" -->
-    <!--     [class.done]="liked()" -->
-    <!--     (click)="likeClick(timelineEvent())" -->
-    <!--     (keyup)="likeClick(timelineEvent())"> -->
-    <!--     <ng-icon name="phosphorHeartDuotone" size="20" /> -->
-    <!--   </a> -->
-    <!-- </li> -->
     <li>
       <a
         tabindex="0"
-        title="edit event"
+        title="copy link"
         class="btn join-item btn-sm btn-neutral"
-        (click)="edit.emit(timelineEvent())"
-        (keyup)="edit.emit(timelineEvent())">
-        <ng-icon name="phosphorPencilLine" size="20" />
+        [class.done]="copied()"
+        (click)="copyClick(timelineEvent())"
+        (keyup)="copyClick(timelineEvent())">
+        <ng-icon name="phosphorLinkSimpleHorizontal" size="20" />
       </a>
     </li>
-    <li>
-      <a
-        tabindex="0"
-        title="delete event"
-        class="hover:text-warning-content btn btn-neutral join-item btn-sm hover:bg-warning"
-        (click)="delete.emit(timelineEvent())"
-        (keyup)="delete.emit(timelineEvent())">
-        <ng-icon name="phosphorTrash" size="20" />
-      </a>
-    </li>
+    @if (isAuthorized()) {
+      <li>
+        <a
+          tabindex="0"
+          title="like"
+          class="btn join-item btn-sm btn-neutral"
+          [class.done]="liked()"
+          (click)="likeClick(timelineEvent())"
+          (keyup)="likeClick(timelineEvent())">
+          <ng-icon name="phosphorHeartDuotone" size="20" />
+        </a>
+      </li>
+    }
+    @if (isEditable()) {
+      <li>
+        <a
+          tabindex="0"
+          title="edit event"
+          class="btn join-item btn-sm btn-neutral"
+          (click)="edit.emit(timelineEvent())"
+          (keyup)="edit.emit(timelineEvent())">
+          <ng-icon name="phosphorPencilLine" size="20" />
+        </a>
+      </li>
+      <li>
+        <a
+          tabindex="0"
+          title="delete event"
+          class="hover:text-warning-content btn btn-neutral join-item btn-sm hover:bg-warning"
+          (click)="delete.emit(timelineEvent())"
+          (keyup)="delete.emit(timelineEvent())">
+          <ng-icon name="phosphorTrash" size="20" />
+        </a>
+      </li>
+    }
   </ul>
 }
