--- a/src/app/feature/non-authorized/user/login-page/login-page.component.html
+++ b/src/app/feature/non-authorized/user/login-page/login-page.component.html
@@ -10,20 +10,7 @@
           Before sign in, please accept the cookies for continue authorization
         }
       </div>
-
-      <button
-        class="btn btn-primary"
-        (click)="login()"
-        [attr.disabled]="
-          isLoading() || canUseCookies() === false ? true : null
-        ">
-        @if (isLoading() === true) {
-          <span class="loading loading-spinner"></span>
-        } @else {
-          <ng-icon name="phosphorSignIn" size="24"></ng-icon>
-        }
-        authorize
-      </button>
+      <app-shared-auth-button />
     </div>
   </app-shared-hero>
 </app-shared-layout>
