--- a/src/app/feature/account/features/settings/settings.component.html
+++ b/src/app/feature/account/features/settings/settings.component.html
@@ -15,9 +15,7 @@
         [class.input-error]="form.controls.name.invalid"
         class="input join-item w-full grow"
         [formControl]="form.controls.name" />
-      <app-feature-flag
-        [feature]="'show_user_accounts'"
-        [accountSettings]="featureSettings()">
+      <app-feature-flag [feature]="'show_user_accounts'">
         <div class="tooltip tooltip-left" data-tip="add account">
           <button
             class="btn join-item btn-neutral w-auto"
