feat: event url could be copied to clipboard

--- a/src/app/feature/timeline/components/list/list.component.html
+++ b/src/app/feature/timeline/components/list/list.component.html
@@ -23,7 +23,9 @@
             [isEditable]="isEditable()"
             [isAuthorized]="isAuthorized()"
             (delete)="delete.emit($event)"
-            (edit)="edit.emit($event)" />
+            (edit)="edit.emit($event)"
+            (copyLink)="copyLink.emit($event)"
+            (like)="like.emit($event)" />
         }
       </div>
       @if (!event.loading) {
@@ -39,7 +41,9 @@
               [isEditable]="isEditable()"
               [isAuthorized]="isAuthorized()"
               (delete)="delete.emit($event)"
-              (edit)="edit.emit($event)" />
+              (edit)="edit.emit($event)"
+              (copyLink)="copyLink.emit($event)"
+              (like)="like.emit($event)" />
           </div>
         </div>
       }
