--- a/src/app/feature/timeline/share/timeline/timeline.component.html
+++ b/src/app/feature/timeline/share/timeline/timeline.component.html
@@ -18,7 +18,9 @@
       [isEditable]="isEditable()"
       [isAuthorized]="isAuthorized()"
       (delete)="delete.emit($event)"
-      (edit)="editEvent($event)" />
+      (edit)="editEvent($event)"
+      (copyLink)="linkEvent($event)"
+      (like)="likeEvent($event)" />
   } @else {
     @if (!error() && !isLoading()) {
       <div role="alert" class="alert alert-info">
