--wip-- [skip ci]

--- a/src/app/feature/ui/layout/footer/footer.component.html
+++ b/src/app/feature/ui/layout/footer/footer.component.html
@@ -10,6 +10,10 @@
   </aside>
 
   <nav>
+    <h6 class="footer-title"></h6>
+    <a class="link-hover link" href="/about">About</a>
+  </nav>
+  <nav>
     <h6 class="footer-title">Legal</h6>
     <a class="link-hover link" href="/legal/terms">Terms of Service</a>
     <a class="link-hover link" href="/legal/privacy">Privacy Policy</a>
