--- a/src/app/feature/timeline/share/timeline/timeline.component.html
+++ b/src/app/feature/timeline/share/timeline/timeline.component.html
@@ -23,9 +23,9 @@
       (like)="likeEvent($event)" />
   } @else {
     @if (!error() && !isLoading()) {
-      <div role="alert" class="alert alert-info">
+      <div role="alert" class="alert alert-info mt-4">
         <ng-icon name="phosphorInfo" size="32" />
-        <span>There are no events.</span>
+        <span>No events found. Why not add one?</span>
       </div>
     }
   }
