fix: disable link to adding event

--- a/src/app/feature/timeline/share/timeline/timeline.component.html
+++ b/src/app/feature/timeline/share/timeline/timeline.component.html
@@ -28,9 +28,9 @@
         @if (isEditable()) {
           <p>
             Why not
-            <a href="/timeline/{{ timelineId() }}/add-event" class="link">
-              add one?
-            </a>
+            <!-- <a href="/timeline/{{ timelineId() }}/add-event" class="link"> -->
+            add one?
+            <!-- </a> -->
           </p>
         }
       </div>
