fix: update styling for 404 page

--- a/src/app/feature/non-authorized/404/404-page.component.html
+++ b/src/app/feature/non-authorized/404/404-page.component.html
@@ -1,5 +1,5 @@
 <app-shared-layout>
-  <app-shared-hero>
+  <div class="grid h-full grid-cols-2 items-center gap-4 px-22">
     <div class="face">
       <div class="band">
         <div class="blue"></div>
@@ -22,5 +22,5 @@
         }
       </div>
     </div>
-  </app-shared-hero>
+  </div>
 </app-shared-layout>
