fix: change 404 error message

--- a/src/app/feature/non-authorized/404/404-page.component.html
+++ b/src/app/feature/non-authorized/404/404-page.component.html
@@ -11,8 +11,12 @@
     </div>
     <div>
       <h1 class="lg:text-10xl text-7xl">404</h1>
+      <p class="pt-4 pb-2 text-xl">
+        The page you are looking for cannot be found.
+      </p>
       <p class="py-6">
-        Oops! We can’t seem to find the page you’re looking for.
+        This might be because you entered the address incorrectly, or the page
+        has been moved or deleted.
       </p>
       <div class="flex w-full flex-col items-center lg:flex-row">
         @if (!this.isAuthorized()) {
