feat(navigation): refactor navigation logic to use builder pattern
- Removed redundant navigation actions and effects
- Introduced NavigationBuilder for constructing navigation destinations
- Updated components to use NavigationBuilder for navigation

--- a/src/app/feature/events/page/show/show-event-page.component.html
+++ b/src/app/feature/events/page/show/show-event-page.component.html
@@ -44,7 +44,7 @@
         [isAuthorized]="false" />
     </div>
     <p class="bg-base-300 my-4 rounded-b-xl p-4 text-center">
-      <a class="link" href="/timeline/{{ event.timelineId }}">show more</a>
+      <a class="link" [href]="timelineUrl(event.timelineId)">show more</a>
     </p>
   }
 </app-shared-layout>
