--- a/src/app/feature/non-authorized/index/index-page.component.html
+++ b/src/app/feature/non-authorized/index/index-page.component.html
@@ -31,7 +31,7 @@
       [isEditable]="false"
       [isAuthorized]="isAuthorized()" />
     <p class="bg-base-300 my-4 rounded-b-xl p-4 text-center">
-      <a class="link" href="/timeline/1">show more</a>
+      <a class="link" [href]="timelineUrl()">show more</a>
     </p>
   </div>
   <div class="bg-base-100 mt-4 hidden rounded-lg p-4">
