feat(timeline): remove accountId from addTimeline action

--- a/src/app/feature/authorized/dashboard/dashboard.component.html
+++ b/src/app/feature/authorized/dashboard/dashboard.component.html
@@ -6,12 +6,10 @@
       </div>
     } @else {
       @if (shouldAddTimeline()) {
-        @if (activeAccountId(); as accountId) {
-          <app-create-timeline-button
-            [isAuthorized]="true"
-            [isLoading]="isLoading()"
-            (addTimeline)="addTimeline($event, accountId)" />
-        }
+        <app-create-timeline-button
+          [isAuthorized]="true"
+          [isLoading]="isLoading()"
+          (addTimeline)="addTimeline($event)" />
       } @else {
         @if (activeTimelineId(); as timelineId) {
           <app-add-event-button
