feat: add navigation to add event form

--- a/src/app/feature/dashboard/dashboard.component.html
+++ b/src/app/feature/dashboard/dashboard.component.html
@@ -15,7 +15,7 @@
       } @else {
         @if (activeTimelineId(); as timelineId) {
           <app-add-event-button
-            (addEvent)="dispatchNewEventCreation()"
+            (addEvent)="navigateToAddEvent()"
             [disabled]="canAddNewEvent() !== true"
             [withTooltip]="canAddNewEvent() === true"
             [showTooltip]="showTipForAddEvent()" />
