refactor: refactor event editing to dashboard operations

--- a/src/app/feature/dashboard/dashboard.component.html
+++ b/src/app/feature/dashboard/dashboard.component.html
@@ -27,7 +27,7 @@
             [isEditable]="true"
             [isAuthorized]="true"
             (delete)="deleteEvent($event)"
-            (edit)="editEvent($event)" />
+            (edit)="navigateToEditEvent($event.id)" />
 
           <app-modal-confirm
             [show]="showConfirmWindow()"
