fix: fix disabling edit event close button

--- a/src/app/feature/dashboard/edit-event/edit-event-form/edit-event-form.component.html
+++ b/src/app/feature/dashboard/edit-event/edit-event-form/edit-event-form.component.html
@@ -85,5 +85,6 @@
     [acceptButtonTitle]="submitButton().title"
     dismissButtonTitle="close"
     [acceptButtonIcon]="submitButton().icon"
+    [isLoading]="loading()"
     [isDisabled]="!editForm.valid || loading()" />
 </form>
