--- a/src/app/feature/dashboard/add-event-button/add-event-button.component.scss
+++ b/src/app/feature/dashboard/add-event-button/add-event-button.component.scss
@@ -1,4 +1,4 @@
-@use '../../../../../assets/css/global' as g;
+@use '../../../../assets/css/global' as g;
 
 $icons-animation-duration: g.$animation-duration;
 
