refactor: rename top dashboard button

--- a/src/app/feature/dashboard/dashboard.component.html
+++ b/src/app/feature/dashboard/dashboard.component.html
@@ -14,7 +14,7 @@
         </button>
       } @else {
         @if (activeTimelineId(); as timelineId) {
-          <app-add-event-button
+          <app-top-dashboard-button
             (addEvent)="navigateToAddEvent()"
             [disabled]="canAddNewEvent() !== true"
             [withTooltip]="canAddNewEvent() === true"
