--- a/src/app/feature/dashboard/add-event-button/top-dashboard-button.component.html
+++ b/src/app/feature/dashboard/add-event-button/top-dashboard-button.component.html
@@ -1,22 +1,34 @@
-<div
-  class="wrapper tooltip-right tooltip-info"
-  [class.tooltip]="withTooltip()"
-  [class.tooltip-open]="showTooltip()"
-  data-tip="now you can add your first event">
+@if (!timelineId()) {
   <a
-    class="btn btn-accent text-white lg:inline-flex"
     tabindex="0"
-    [class.btn-circle]="!disabled()"
-    (click)="addEvent.emit()"
-    (keypress.enter)="addEvent.emit()"
-    [attr.disabled]="disabled() ? 'true' : null"
-    [class.hidden]="disabled()">
-    @if (disabled() === true) {
-      <ng-icon name="phosphorPencilSimpleLine" size="32"></ng-icon>
-      submit new event
-    } @else {
-      <ng-icon name="phosphorPlus" size="32" class="plus"></ng-icon>
-      <ng-icon name="phosphorPencilSimpleLine" size="32" class="edit"></ng-icon>
-    }
+    class="btn btn-accent text-base-content"
+    (click)="addTimeline.emit()"
+    (keypress.enter)="addTimeline.emit()"
+    [attr.disabled]="isLoading() ? 'true' : null">
+    <ng-icon name="phosphorTreeView" size="28"></ng-icon>
+    create timeline
   </a>
-</div>
+} @else {
+  <div
+    class="wrapper tooltip-right tooltip-info tooltip"
+    [class.tooltip-open]="buttonState().tooltip.open"
+    [attr.data-tip]="buttonState().tooltip.tip">
+    <a
+      class="btn btn-accent btn-circle text-white lg:inline-flex"
+      tabindex="0"
+      (click)="buttonState().click.emit()"
+      (keypress.enter)="buttonState().click.emit()"
+      [attr.disabled]="isLoading() ? 'true' : null">
+      <ng-icon
+        [svg]="buttonState().icon"
+        [class.plus]="!isLoading()"
+        size="32"></ng-icon>
+      @if (!isLoading()) {
+        <ng-icon
+          [svg]="buttonState().secontIcon"
+          [class.edit]="!isLoading()"
+          size="32"></ng-icon>
+      }
+    </a>
+  </div>
+}
