--- a/src/app/feature/dashboard/dashboard.component.html
+++ b/src/app/feature/dashboard/dashboard.component.html
@@ -5,36 +5,30 @@
         <progress class="progress w-3/4"></progress>
       </div>
     } @else {
-      @if (shouldAddTimeline()) {
-        <button
-          class="btn btn-accent text-base-content"
-          (click)="navigateToAddTimeline()">
-          <ng-icon name="phosphorTreeView" size="28"></ng-icon>
-          create timeline
-        </button>
-      } @else {
-        @if (activeTimelineId(); as timelineId) {
-          <app-top-dashboard-button
-            (addEvent)="navigateToAddEvent()"
-            [disabled]="canAddNewEvent() !== true"
-            [withTooltip]="canAddNewEvent() === true"
-            [showTooltip]="showTipForAddEvent()" />
+      <app-top-dashboard-button
+        [timelineId]="activeTimelineId()"
+        [isLoading]="isLoading()"
+        [isEditing]="isEditingEvent()"
+        [isEmptyTimeline]="showTipForAddEvent()"
+        (addEvent)="navigateToAddEvent()"
+        (addTimeline)="navigateToAddTimeline()"
+        (dismissEdit)="closeEditForm()" />
 
-          <app-edit-event />
+      @if (activeTimelineId(); as timelineId) {
+        <app-edit-event />
 
-          <app-shared-timeline
-            [timelineId]="timelineId"
-            [isEditable]="true"
-            [isAuthorized]="true"
-            (delete)="deleteEvent($event)"
-            (edit)="editEvent($event)" />
+        <app-shared-timeline
+          [timelineId]="timelineId"
+          [isEditable]="true"
+          [isAuthorized]="true"
+          (delete)="deleteEvent($event)"
+          (edit)="editEvent($event)" />
 
-          <app-modal-confirm
-            [show]="showConfirmWindow()"
-            (confirmAction)="confirmDelete()"
-            (dismissAction)="dismissDelete()"
-            confirmMessage="Are you shure you want to delete this event?" />
-        }
+        <app-modal-confirm
+          [show]="showConfirmWindow()"
+          (confirmAction)="confirmDelete()"
+          (dismissAction)="dismissDelete()"
+          confirmMessage="Are you shure you want to delete this event?" />
       }
     }
   </div>
