--- a/src/app/feature/non-authorized/develop/develop-page.component.html
+++ b/src/app/feature/non-authorized/develop/develop-page.component.html
@@ -63,5 +63,35 @@
         <app-shared-loader />
       </div>
     </div>
+
+    <div class="py-4" id="TopDashboardButtonComponent">
+      <h2 class="text-2xl">TopDashboardButtonComponent</h2>
+      <div class="mt-4 grid w-full grid-cols-4 gap-4">
+        <app-top-dashboard-button [timelineId]="null" [isEditing]="false" />
+        <app-top-dashboard-button
+          [timelineId]="1"
+          [isEditing]="false"
+          [isEmptyTimeline]="true" />
+        <app-top-dashboard-button [timelineId]="1" [isEditing]="false" />
+        <app-top-dashboard-button [timelineId]="1" [isEditing]="true" />
+        <app-top-dashboard-button
+          [timelineId]="null"
+          [isEditing]="false"
+          [isLoading]="true" />
+        <app-top-dashboard-button
+          [timelineId]="1"
+          [isEditing]="false"
+          [isEmptyTimeline]="true"
+          [isLoading]="true" />
+        <app-top-dashboard-button
+          [timelineId]="1"
+          [isEditing]="false"
+          [isLoading]="true" />
+        <app-top-dashboard-button
+          [timelineId]="1"
+          [isEditing]="true"
+          [isLoading]="true" />
+      </div>
+    </div>
   </div>
 </app-shared-layout>
